--- a/src/sales/templates/sales/home.html
+++ b/src/sales/templates/sales/home.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
-<title>
-    Bookstore Home
-</title>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sales Home</title>
+</head>
 
 <body>
-    Welcome to our Bookstore
+    <h1>Welcome to the Sales Home Page</h1>
 </body>
 
 </html>
